tests/ui/box/alloc-unstable-fail.stderr
error[E0658]: use of unstable library feature `allocator_api`
  --> $DIR/alloc-unstable-fail.rs:4:26
   |
LL |     let _boxed: Box<u32, _> = Box::new(10);
   |                          ^
   |
   = note: see issue #32838 <https://github.com/rust-lang/rust/issues/32838> for more information
   = help: add `#![feature(allocator_api)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
